--- a/index.html
+++ b/index.html
@@ -1,33 +1,105 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Document</title>
+    <title>URBE</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="card card1">
-        <img class="img" src="https://images.wikidexcdn.net/mwuploads/wikidex/9/96/latest/20100221120532/Gu%C3%ADa_HGSS_-_325.png">
-        <h1 class="title">HO-OH</h1>
-        <H2 class="description">POKEMON LEGENDARIO</H2>
-        <P class="content">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, aliquid quia. Debitis dolore nam facere quibusdam enim voluptatibus cumque recusandae quasi, voluptatum cum repellendus amet? A sit aspernatur provident sed?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, aliquid quia. Debitis dolore nam facere quibusdam enim voluptatibus cumque recusandae quasi, voluptatum cum repellendus amet? A sit aspernatur provident sed?
-        </P>
+    <div class="title">
+        <h1>CORTE DE NOTAS</h1>
     </div>
-    <div class="card card2">
-        <img class="img" src="https://images.wikidexcdn.net/mwuploads/wikidex/a/a6/latest/20100221120534/Gu%C3%ADa_HGSS_-_328.png">
-        <h1 class="title">HO-OH</h1>
-        <H2 class="description">POKEMON LEGENDARIO</H2>
-        <P class="content">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, aliquid quia. Debitis dolore nam facere quibusdam enim voluptatibus cumque recusandae quasi, voluptatum cum repellendus amet? A sit aspernatur provident sed?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, aliquid quia. Debitis dolore nam facere quibusdam enim voluptatibus cumque recusandae quasi, voluptatum cum repellendus amet? A sit aspernatur provident sed?
-        </P>
+    <div class="cajaA">
+        <h2 class="titulo">AAAAAAAAAA</h2>
+        <h2 class="descripcion">AAAAA</h2>
+        <H3 class="aaa">AAA</H3>
+        <div class="circulo">
+            <p class="nota">0.00</p>
+        </div>
     </div>
-    <div class="card card3">
-        <img class="img" src="https://images.wikidexcdn.net/mwuploads/wikidex/b/b3/latest/20100221120606/Gu%C3%ADa_HGSS_-_338.png">
-        <h1 class="title">HO-OH</h1>
-        <H2 class="description">POKEMON LEGENDARIO</H2>
-        <P class="content">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, aliquid quia. Debitis dolore nam facere quibusdam enim voluptatibus cumque recusandae quasi, voluptatum cum repellendus amet? A sit aspernatur provident sed?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, aliquid quia. Debitis dolore nam facere quibusdam enim voluptatibus cumque recusandae quasi, voluptatum cum repellendus amet? A sit aspernatur provident sed?
-        </P>
+    <div class="cajaB">
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> AAAAA</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <div class="corte">
+            <p class="ncorte"><strong>AAA</strong><strong class="B">..........................................</strong>00/00/0000</p>
+        </div>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <div class="corte">
+            <p class="ncorte"><strong>AAA</strong><strong class="B">..........................................</strong>00/00/0000</p>
+        </div>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <div class="corte">
+            <p class="ncorte"><strong>AAA</strong><strong class="B">..........................................</strong>00/00/0000</p>
+        </div>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+    </div>
+    <div class="cajaA">
+        <h2 class="titulo">AAAAAAAAAA</h2>
+        <h2 class="descripcion">AAAAA</h2>
+        <H3 class="aaa">AAA</H3>
+        <div class="circulo">
+            <p class="nota">0.00</p>
+        </div>
+    </div>
+    <div class="cajaB">
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> AAAAA</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <div class="corte">
+            <p class="ncorte"><strong>AAA</strong><strong class="B">..........................................</strong>00/00/0000</p>
+        </div>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <div class="corte">
+            <p class="ncorte"><strong>AAA</strong><strong class="B">..........................................</strong>00/00/0000</p>
+        </div>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <div class="corte">
+            <p class="ncorte"><strong>AAA</strong><strong class="B">..........................................</strong>00/00/0000</p>
+        </div>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+    </div>
+    <div class="cajaA">
+        <h2 class="titulo">AAAAAAAAAA</h2>
+        <h2 class="descripcion">AAAAA</h2>
+        <H3 class="aaa">AAA</H3>
+        <div class="circulo">
+            <p class="nota">0.00</p>
+        </div>
+    </div>
+    <div class="cajaB">
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> AAAAA</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <div class="corte">
+            <p class="ncorte"><strong>AAA</strong><strong class="B">..........................................</strong>00/00/0000</p>
+        </div>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <div class="corte">
+            <p class="ncorte"><strong>AAA</strong><strong class="B">..........................................</strong>00/00/0000</p>
+        </div>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <div class="corte">
+            <p class="ncorte"><strong>AAA</strong><strong class="B">..........................................</strong>00/00/0000</p>
+        </div>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>AAAAA:</strong> 00000</p>
     </div>
 </body>
 </html>
