--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <title>URBE</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
 </head>
-<body>
+<body class="contenedor">
     <div class="title">
         <h1>CORTE DE NOTAS</h1>
+    </div>
+    <div class="cajaS">
+        <p class="textS">AAAAA<p/>
+    </div>
+    <div class="cajaS">
+        <p class="textS">AAAAA<p/>
     </div>
     <div class="cajaA">
         <h2 class="titulo">AAAAAAAAAA</h2>
