--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
         <p><strong>AAAAA:</strong> AAAAA</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
@@ -59,19 +59,19 @@
         <p><strong>AAAAA:</strong> AAAAA</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
@@ -90,19 +90,19 @@
         <p><strong>AAAAA:</strong> AAAAA</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
