--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
 </head>
-<body class="contenedor">
+<body>
     <div class="title">
         <h1>CORTE DE NOTAS</h1>
     </div>
+<div class="contenedor">
     <div class="cajaS">
         <p class="textS">AAAAA<p/>
     </div>
@@ -108,5 +109,6 @@
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
     </div>
+</div>
 </body>
 </html>
