--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <p><strong>AAAAA:</strong> AAAAA</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
@@ -60,19 +60,19 @@
         <p><strong>AAAAA:</strong> AAAAA</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
@@ -91,19 +91,19 @@
         <p><strong>AAAAA:</strong> AAAAA</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">.............................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
         </div>
         <p><strong>AAAAA:</strong> 00000</p>
         <p><strong>AAAAA:</strong> 00000</p>
