--- a/index.html
+++ b/index.html
@@ -11,103 +11,165 @@
     </div>
 <div class="contenedor">
     <div class="cajaS">
-        <p class="textS">AAAAA<p/>
+        <p class="textS">INGENIERÍA EN ELECTRÓNICA<p/>
     </div>
     <div class="cajaS">
-        <p class="textS">AAAAA<p/>
+        <p class="textS">Mayo 2024 - Agosto 2024<p/>
     </div>
     <div class="cajaA">
-        <h2 class="titulo">AAAAAAAAAA</h2>
-        <h2 class="descripcion">AAAAA</h2>
-        <H3 class="aaa">AAA</H3>
+        <h2 class="titulo">INGLÉS I</h2>
+        <h2 class="descripcion">SECCIÓN: C311</h2>
+        <H3 class="aaa">Ver menos</H3>
         <div class="circulo">
-            <p class="nota">0.00</p>
+            <p class="nota">4.50</p>
         </div>
     </div>
     <div class="cajaB">
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> AAAAA</p>
-        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>Código:</strong> 071603050302</p>
+        <p><strong>Docente:</strong> Alicia Socorro</p>
+        <p><strong>Identificación:</strong> 08502269</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">................................................</strong>29/05/2024</p>
         </div>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>Nota / Base:</strong> 15/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 4.50</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">................................................</strong>00/00/0000</p>
         </div>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>Nota / Base:</strong> 00/00</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 0.00</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">................................................</strong>00/00/0000</p>
         </div>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>Nota / Base:</strong> 00/00</p>
+        <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
+        <p><strong>Nota %:</strong> 0.00</p>
     </div>
     <div class="cajaA">
-        <h2 class="titulo">AAAAAAAAAA</h2>
-        <h2 class="descripcion">AAAAA</h2>
-        <H3 class="aaa">AAA</H3>
+        <h2 class="titulo">CÁLCULO III</h2>
+        <h2 class="descripcion">SECCIÓN: C311</h2>
+        <H3 class="aaa">Ver menos</H3>
         <div class="circulo">
-            <p class="nota">0.00</p>
+            <p class="nota">9.30</p>
         </div>
     </div>
     <div class="cajaB">
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> AAAAA</p>
-        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>Código:</strong> 071603010605</p>
+        <p><strong>Docente:</strong> Alexis Landaeta</p>
+        <p><strong>Identificación:</strong> 04637266</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">................................................</strong>07/06/2024</p>
         </div>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>Nota / Base:</strong> 07/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 2.10</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">................................................</strong>00/00/0000</p>
         </div>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>Nota / Base:</strong> 11/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 5.70</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">................................................</strong>00/00/0000</p>
         </div>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>Nota / Base:</strong> 09/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
+        <p><strong>Nota %:</strong> 3.60</p>
     </div>
     <div class="cajaA">
-        <h2 class="titulo">AAAAAAAAAA</h2>
-        <h2 class="descripcion">AAAAA</h2>
-        <H3 class="aaa">AAA</H3>
+        <h2 class="titulo">FÍSICA II</h2>
+        <h2 class="descripcion">SECCIÓN: H312</h2>
+        <H3 class="aaa">Ver menos</H3>
         <div class="circulo">
-            <p class="nota">0.00</p>
+            <p class="nota">3.60</p>
         </div>
     </div>
     <div class="cajaB">
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> AAAAA</p>
-        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>Código:</strong> 071603030605</p>
+        <p><strong>Docente:</strong> Nomar Zambrano</p>
+        <p><strong>Identificación:</strong> 14280881</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">................................................</strong>31/05/2024</p>
         </div>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>Nota / Base:</strong> 12/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 3.60</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">................................................</strong>00/00/0000</p>
         </div>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>Nota / Base:</strong> 00/00</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 0.00</p>
         <div class="corte">
-            <p class="ncorte"><strong>AAA</strong><strong class="B">................................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">................................................</strong>00/00/0000</p>
         </div>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
-        <p><strong>AAAAA:</strong> 00000</p>
+        <p><strong>Nota / Base:</strong> 00/00</p>
+        <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
+        <p><strong>Nota %:</strong> 0.00</p>
+    </div>
+    <div class="cajaA">
+        <h2 class="titulo">QUÍMICA</h2>
+        <h2 class="descripcion">SECCIÓN: O311</h2>
+        <H3 class="aaa">Ver menos</H3>
+        <div class="circulo">
+            <p class="nota">2.10</p>
+        </div>
+    </div>
+    <div class="cajaB">
+        <p><strong>Código:</strong> 071603020605</p>
+        <p><strong>Docente:</strong> Pablo Reyes</p>
+        <p><strong>Identificación:</strong> 07787457</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">................................................</strong>30/05/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 07/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 2.10</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">................................................</strong>00/00/0000</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 00/00</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 0.00</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">................................................</strong>00/00/0000</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 00/00</p>
+        <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
+        <p><strong>Nota %:</strong> 0.00</p>
+    </div>
+    <div class="cajaA">
+        <h2 class="titulo">ACTIVIDAD FÍSICA Y SALUD</h2>
+        <h2 class="descripcion">SECCIÓN: D111</h2>
+        <H3 class="aaa">Ver menos</H3>
+        <div class="circulo">
+            <p class="nota">5.40</p>
+        </div>
+    </div>
+    <div class="cajaB">
+        <p><strong>Código:</strong> 071603040302</p>
+        <p><strong>Docente:</strong> Wilinton Argote</p>
+        <p><strong>Identificación:</strong> 12445729</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">................................................</strong>04/06/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 18/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 5.40</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">................................................</strong>00/00/0000</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 00/00</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 0.00</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">................................................</strong>00/00/0000</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 00/00</p>
+        <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
+        <p><strong>Nota %:</strong> 0.00</p>
     </div>
 </div>
 </body>
