--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <p><strong>Docente:</strong> Alicia Socorro</p>
         <p><strong>Identificación:</strong> 08502269</p>
         <div class="corte">
-            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">...........................................</strong>29/05/2024</p>
+            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">........................................</strong>29/05/2024</p>
         </div>
         <p><strong>Nota / Base:</strong> 15/20</p>
         <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
         <p><strong>Nota %:</strong> 4.50</p>
         <div class="corte">
-            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">...........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">........................................</strong>00/00/0000</p>
         </div>
         <p><strong>Nota / Base:</strong> 00/00</p>
         <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
         <p><strong>Nota %:</strong> 0.00</p>
         <div class="corte">
-            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">...........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">........................................</strong>00/00/0000</p>
         </div>
         <p><strong>Nota / Base:</strong> 00/00</p>
         <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
@@ -60,19 +60,19 @@
         <p><strong>Docente:</strong> Alexis Landaeta</p>
         <p><strong>Identificación:</strong> 04637266</p>
         <div class="corte">
-            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">...........................................</strong>07/06/2024</p>
+            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">........................................</strong>07/06/2024</p>
         </div>
         <p><strong>Nota / Base:</strong> 07/20</p>
         <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
         <p><strong>Nota %:</strong> 2.10</p>
         <div class="corte">
-            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">...........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">........................................</strong>00/00/0000</p>
         </div>
         <p><strong>Nota / Base:</strong> 11/20</p>
         <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
         <p><strong>Nota %:</strong> 5.70</p>
         <div class="corte">
-            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">...........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">........................................</strong>00/00/0000</p>
         </div>
         <p><strong>Nota / Base:</strong> 09/20</p>
         <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
@@ -91,19 +91,19 @@
         <p><strong>Docente:</strong> Nomar Zambrano</p>
         <p><strong>Identificación:</strong> 14280881</p>
         <div class="corte">
-            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">...........................................</strong>31/05/2024</p>
+            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">........................................</strong>31/05/2024</p>
         </div>
         <p><strong>Nota / Base:</strong> 12/20</p>
         <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
         <p><strong>Nota %:</strong> 3.60</p>
         <div class="corte">
-            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">...........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">........................................</strong>00/00/0000</p>
         </div>
         <p><strong>Nota / Base:</strong> 00/00</p>
         <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
         <p><strong>Nota %:</strong> 0.00</p>
         <div class="corte">
-            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">...........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">........................................</strong>00/00/0000</p>
         </div>
         <p><strong>Nota / Base:</strong> 00/00</p>
         <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
@@ -122,19 +122,19 @@
         <p><strong>Docente:</strong> Pablo Reyes</p>
         <p><strong>Identificación:</strong> 07787457</p>
         <div class="corte">
-            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">...........................................</strong>30/05/2024</p>
+            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">........................................</strong>30/05/2024</p>
         </div>
         <p><strong>Nota / Base:</strong> 07/20</p>
         <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
         <p><strong>Nota %:</strong> 2.10</p>
         <div class="corte">
-            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">...........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">........................................</strong>00/00/0000</p>
         </div>
         <p><strong>Nota / Base:</strong> 00/00</p>
         <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
         <p><strong>Nota %:</strong> 0.00</p>
         <div class="corte">
-            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">...........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">........................................</strong>00/00/0000</p>
         </div>
         <p><strong>Nota / Base:</strong> 00/00</p>
         <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
@@ -153,19 +153,19 @@
         <p><strong>Docente:</strong> Wilinton Argote</p>
         <p><strong>Identificación:</strong> 12445729</p>
         <div class="corte">
-            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">...........................................</strong>04/06/2024</p>
+            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">........................................</strong>04/06/2024</p>
         </div>
         <p><strong>Nota / Base:</strong> 18/20</p>
         <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
         <p><strong>Nota %:</strong> 5.40</p>
         <div class="corte">
-            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">...........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">........................................</strong>00/00/0000</p>
         </div>
         <p><strong>Nota / Base:</strong> 00/00</p>
         <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
         <p><strong>Nota %:</strong> 0.00</p>
         <div class="corte">
-            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">...........................................</strong>00/00/0000</p>
+            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">........................................</strong>00/00/0000</p>
         </div>
         <p><strong>Nota / Base:</strong> 00/00</p>
         <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
