--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
 
     <script>
-        var dia = "Domingo";
+        var dia = "Lunes";
         function cambiarDia1() {
             if (dia = "Domingo") {
                 document.getElementById("dia").innerHTML = "aaaaa"
@@ -29,10 +29,11 @@
             </script>
         </h2>
     </div>
-    <button class="bot1" onclick="cambiarDia1()"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-back_97586.png"></button>
-    <a href="index2.html">
-        <button class="bot2"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-next_97622.png"></button>
+    <a href="index.html">
+        <button class="bot1"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-back_97586.png"></button>
     </a>
+    <button class="bot2" onclick="alert(aaaaa)"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-next_97622.png"></button>
+    
     <button onclick="abc()">abc</button>
     <script>
         function abc() {
