--- a/Domingo.html
+++ b/Domingo.html
@@ -4,42 +4,20 @@
     <title>URBE</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
-
-    <script>
-        var dia = "Domingo";
-        function cambiarDia1() {
-            if (dia = "Domingo") {
-                document.getElementById("dia").innerHTML = "aaaaa"
-            } else {
-                document.getElementById("dia").innerHTML = "Dom"
-            }
-            
-        }
-    </script>
-
 </head>
 <body>
     <div class="title">
         <h1>HORARIO DE CLASES</h1>
     </div>
     <div class="dias">
-        <h2 id="dia">
-            <script>
-                document.write(dia);
-            </script>
-        </h2>
+        <h2>Domingo</h2>
     </div>
-    <button class="bot1" onclick="cambiarDia1()"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-back_97586.png"></button>
-    <a href="index2.html">
+    <a href="Sabado.html">
+        <button class="bot1""><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-back_97586.png"></button>
+    </a>
+    <a href="Lunes.html">
         <button class="bot2"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-next_97622.png"></button>
     </a>
-    <button onclick="abc()">abc</button>
-    <script>
-        function abc() {
-            alert("aaaaa")
-        }
-    </script>
-
 <div class="contenedor">
     <div class="cajaA">
         <h2 class="titulo">AAAAA</h2>
