--- a/Lunes.html
+++ b/Lunes.html
@@ -10,21 +10,21 @@
         <h1>HORARIO DE CLASES</h1>
     </div>
     <div class="dias">
-        <h2>Domingo</h2>
+        <h2>Lunes</h2>
     </div>
-    <a href="Sabado.html">
-        <button class="bot1""><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-back_97586.png"></button>
+    <a href="Domingo.html">
+        <button class="bot1"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-back_97586.png"></button>
     </a>
-    <a href="Lunes.html">
+    <a href="Martes.html">
         <button class="bot2"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-next_97622.png"></button>
     </a>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">AAAAA</h2>
+        <h2 class="titulo">Física III</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> AAAAAAAAAA</p>
-        <p><strong>Sección:</strong> A000</p>
+        <p><strong>Profesor:</strong> Alvaro Delmar</p>
+        <p><strong>Sección:</strong> O411</p>
         <p><strong>Aula:</strong> A-00</p>
 </div>
 </body>
