--- a/Domingo.html
+++ b/Domingo.html
@@ -23,7 +23,7 @@
 </div>
 <div class="no">
     <p>
-        <strong>No tienes clases este dia</strong>
+        <strong>No tienes clases para este día</strong>
     </p>
 </div>
 </body>
