--- a/Jueves.html
+++ b/Jueves.html
@@ -20,21 +20,31 @@
     </a>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">Cálculo IV</h2>
+        <h2 class="titulo">CÁLCULO IV</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> Belkis Vera</p>
+        <p><strong>Profesor:</strong> BELKIS VERA</p>
         <p><strong>Sección:</strong> O411</p>
-        <p><strong>Aula:</strong> A-00</p>
+        <p><strong>Aula:</strong> C-13</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>08:00</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>10:00</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">Actividades Recreacionales</h2>
+        <h2 class="titulo">ACTIVIDADES RECREACIONALES</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> Oswaldo Torregroza</p>
+        <p><strong>Profesor:</strong> OSWALDO TORREGROZA</p>
         <p><strong>Sección:</strong> D-211</p>
-        <p><strong>Aula:</strong> A-00</p>
+        <p><strong>Aula:</strong> D-08</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>10:00</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>12:00</strong></p>
 </div>
 </body>
 </html>
