--- a/Martes.html
+++ b/Martes.html
@@ -12,7 +12,7 @@
     <div class="dias">
         <h2>Martes</h2>
     </div>
-    <a href="Lunes.html">
+    <a href="index.html">
         <button class="bot1"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-back_97586.png"></button>
     </a>
     <a href="Miercoles.html">
@@ -20,21 +20,31 @@
     </a>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">Física III</h2>
+        <h2 class="titulo">FÍSICA III</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> Alvaro Delmar</p>
+        <p><strong>Profesor:</strong> ALVARO DELMAR</p>
         <p><strong>Sección:</strong> O411</p>
-        <p><strong>Aula:</strong> A-00</p>
+        <p><strong>Aula:</strong> F-34</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>08:00</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>10:00</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">Programación</h2>
+        <h2 class="titulo">PROGRAMACIÓN</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> Junior Gonzalez</p>
+        <p><strong>Profesor:</strong> JUNIOR GONZALEZ</p>
         <p><strong>Sección:</strong> O411</p>
-        <p><strong>Aula:</strong> A-00</p>
+        <p><strong>Aula:</strong> F-56</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>10:00</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>12:00</strong></p>
 </div>
 </body>
 </html>
