--- a/Miercoles.html
+++ b/Miercoles.html
@@ -20,12 +20,17 @@
     </a>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">Desarrollo Sustentable</h2>
+        <h2 class="titulo">DESARROLLO SUSTENTABLE</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> Gladys Rubio</p>
+        <p><strong>Profesor:</strong> GLADYS RUBIO</p>
         <p><strong>Sección:</strong> S511</p>
-        <p><strong>Aula:</strong> A-00</p>
+        <p><strong>Aula:</strong> A-19</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>10:00</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>12:00</strong></p>
 </div>
 </body>
 </html>
