--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
     </a>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">Física III</h2>
+        <h2 class="titulo">FÍSICA III</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> Alvaro Delmar</p>
+        <p><strong>Profesor:</strong> ALVARO DELMAR</p>
         <p><strong>Sección:</strong> O411</p>
-        <p><strong>Aula:</strong> A-00</p>
+        <p><strong>Aula:</strong> F-39</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>08:00</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>10:40</strong></p>
 </div>
 </body>
 </html>
