--- a/Jueves.html
+++ b/Jueves.html
@@ -20,12 +20,12 @@
     </a>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">CÁLCULO IV</h2>
+        <h2 class="titulo">INTRODUCCIÓN A LA CONTABILIDAD</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> BELKIS VERA</p>
-        <p><strong>Sección:</strong> O411</p>
-        <p><strong>Aula:</strong> C-13</p>
+        <p><strong>Profesor:</strong> TAMARA ALBORNOZ</p>
+        <p><strong>Sección:</strong> R211</p>
+        <p><strong>Aula:</strong> C-15</p>
 </div>
 <div class="horas">
     <p class="hora"><strong>08:00</strong></p>
@@ -34,17 +34,31 @@
 </div>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">ACTIVIDADES RECREACIONALES</h2>
+        <h2 class="titulo">LEGISLACIÓN EMPRESARIAL</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> OSWALDO TORREGROZA</p>
-        <p><strong>Sección:</strong> D-211</p>
-        <p><strong>Aula:</strong> D-08</p>
+        <p><strong>Profesor:</strong> ANA AÑAZ</p>
+        <p><strong>Sección:</strong> P711</p>
+        <p><strong>Aula:</strong> A-14</p>
 </div>
 <div class="horas">
     <p class="hora"><strong>10:00</strong></p>
     <p class="hora"><strong>a</strong></p>
     <p class="hora"><strong>12:00</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
+        <h2 class="titulo">ACTIVIDADES RECREACIONALES</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> VERENA PICHON</p>
+        <p><strong>Sección:</strong> B521</p>
+        <p><strong>Aula:</strong> F-22</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>12:00</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>02:00</strong></p>
 </div>
 </body>
 </html>
