--- a/Viernes.html
+++ b/Viernes.html
@@ -18,33 +18,47 @@
     <a href="Sabado.html">
         <button class="bot2"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-next_97622.png"></button>
     </a>
-<div class="contenedor">
-    <div class="cajaA">
-        <h2 class="titulo">CÁLCULO IV</h2>
+    <div class="contenedor">
+        <div class="cajaA">
+            <h2 class="titulo">INVESTIGACIÓN DE OPERACIONES</h2>
+        </div>
+        <div class="cajaB">
+            <p><strong>Profesor:</strong> DANIEL BENITEZ</p>
+            <p><strong>Sección:</strong> R411</p>
+            <p><strong>Aula:</strong> E-11</p>
     </div>
-    <div class="cajaB">
-        <p><strong>Profesor:</strong> BELKIS VERA</p>
-        <p><strong>Sección:</strong> O411</p>
-        <p><strong>Aula:</strong> C-20</p>
-</div>
-<div class="horas">
-    <p class="hora"><strong>08:00</strong></p>
-    <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>10:00</strong></p>
-</div>
-<div class="contenedor">
-    <div class="cajaA">
-        <h2 class="titulo">INGLÉS II</h2>
+    <div class="horas">
+        <p class="hora"><strong>08:00</strong></p>
+        <p class="hora"><strong>a</strong></p>
+        <p class="hora"><strong>10:00</strong></p>
     </div>
-    <div class="cajaB">
-        <p><strong>Profesor:</strong> CARLOS CONTRERAS</p>
-        <p><strong>Sección:</strong> D411</p>
-        <p><strong>Aula:</strong> D-13</p>
-</div>
-<div class="horas">
-    <p class="hora"><strong>10:00</strong></p>
-    <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>12:00</strong></p>
-</div>
+    <div class="contenedor">
+        <div class="cajaA">
+            <h2 class="titulo">LEGISLACIÓN EMPRESARIAL</h2>
+        </div>
+        <div class="cajaB">
+            <p><strong>Profesor:</strong> ANA AÑAZ</p>
+            <p><strong>Sección:</strong> P711</p>
+            <p><strong>Aula:</strong> A-14</p>
+    </div>
+    <div class="horas">
+        <p class="hora"><strong>10:00</strong></p>
+        <p class="hora"><strong>a</strong></p>
+        <p class="hora"><strong>12:00</strong></p>
+    </div>
+    <div class="contenedor">
+        <div class="cajaA">
+            <h2 class="titulo">ACTIVIDADES RECREACIONALES</h2>
+        </div>
+        <div class="cajaB">
+            <p><strong>Profesor:</strong> VERENA PICHON</p>
+            <p><strong>Sección:</strong> B521</p>
+            <p><strong>Aula:</strong> F-22</p>
+    </div>
+    <div class="horas">
+        <p class="hora"><strong>12:00</strong></p>
+        <p class="hora"><strong>a</strong></p>
+        <p class="hora"><strong>01:00</strong></p>
+    </div>
 </body>
 </html>
