--- a/Martes.html
+++ b/Martes.html
@@ -20,12 +20,12 @@
     </a>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">FÍSICA III</h2>
+        <h2 class="titulo">COMPORTAMIENTO Y CLIMA ORGANIZACIONAL</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> ALVARO DELMAR</p>
-        <p><strong>Sección:</strong> O411</p>
-        <p><strong>Aula:</strong> F-34</p>
+        <p><strong>Profesor:</strong> SILVIA FUENMAYOR</p>
+        <p><strong>Sección:</strong> E511</p>
+        <p><strong>Aula:</strong> B-03</p>
 </div>
 <div class="horas">
     <p class="hora"><strong>08:00</strong></p>
@@ -34,17 +34,31 @@
 </div>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">PROGRAMACIÓN</h2>
+        <h2 class="titulo">GESTIÓN DE RECURSOS HUMANOS</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> JUNIOR GONZALEZ</p>
-        <p><strong>Sección:</strong> O411</p>
-        <p><strong>Aula:</strong> F-56</p>
+        <p><strong>Profesor:</strong> JORGE POLANCO</p>
+        <p><strong>Sección:</strong> P411</p>
+        <p><strong>Aula:</strong> A-06</p>
 </div>
 <div class="horas">
     <p class="hora"><strong>10:00</strong></p>
     <p class="hora"><strong>a</strong></p>
     <p class="hora"><strong>12:00</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
+        <h2 class="titulo">ACTIVIDADES RECREACIONALES</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> VERENA PICHON</p>
+        <p><strong>Sección:</strong> B521</p>
+        <p><strong>Aula:</strong> F-22</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>03:00</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>06:00</strong></p>
 </div>
 </body>
 </html>
