--- a/Miercoles.html
+++ b/Miercoles.html
@@ -20,17 +20,45 @@
     </a>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">DESARROLLO SUSTENTABLE</h2>
+        <h2 class="titulo">GESTIÓN DE RECURSOS HUMANOS</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> GLADYS RUBIO</p>
-        <p><strong>Sección:</strong> S511</p>
-        <p><strong>Aula:</strong> A-19</p>
+        <p><strong>Profesor:</strong> JORGE POLANCO</p>
+        <p><strong>Sección:</strong> P411</p>
+        <p><strong>Aula:</strong> A-06</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>08:00</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>10:00</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
+        <h2 class="titulo">INVESTIGACIÓN DE OPERACIONES</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> DANIEL BENITEZ</p>
+        <p><strong>Sección:</strong> R411</p>
+        <p><strong>Aula:</strong> E-11</p>
 </div>
 <div class="horas">
     <p class="hora"><strong>10:00</strong></p>
     <p class="hora"><strong>a</strong></p>
     <p class="hora"><strong>12:00</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
+        <h2 class="titulo">COMPORTAMIENTO Y CLIMA ORGANIZACIONAL</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> SILVIA FUENMAYOR</p>
+        <p><strong>Sección:</strong> E511</p>
+        <p><strong>Aula:</strong> B-03</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>12:00</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>01:00</strong></p>
 </div>
 </body>
 </html>
