--- a/index.html
+++ b/index.html
@@ -20,17 +20,45 @@
     </a>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">FÍSICA III</h2>
+        <h2 class="titulo">INTRODUCCIÓN A LA CONTABILIDAD</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> ALVARO DELMAR</p>
-        <p><strong>Sección:</strong> O411</p>
-        <p><strong>Aula:</strong> F-39</p>
+        <p><strong>Profesor:</strong> TAMARA ALBORNOZ</p>
+        <p><strong>Sección:</strong> R211</p>
+        <p><strong>Aula:</strong> C-15</p>
 </div>
 <div class="horas">
     <p class="hora"><strong>08:00</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>10:40</strong></p>
+    <p class="hora"><strong>10:00</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
+        <h2 class="titulo">GESTIÓN DE RECURSOS HUMANOS</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> JORGE POLANCO</p>
+        <p><strong>Sección:</strong> P411</p>
+        <p><strong>Aula:</strong> A-06</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>10:00</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>12:00</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
+        <h2 class="titulo">COMPORTAMIENTO Y CLIMA ORGANIZACIONAL</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> SILVIA FUENMAYOR</p>
+        <p><strong>Sección:</strong> E511</p>
+        <p><strong>Aula:</strong> B-03</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>12:00</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>01:00</strong></p>
 </div>
 </body>
 </html>
