--- a/index.html
+++ b/index.html
@@ -7,58 +7,201 @@
 </head>
 <body>
     <div class="title">
-        <h1>HORARIO DE CLASES</h1>
+        <h1>CORTE DE NOTAS</h1>
     </div>
-    <div class="dias">
-        <h2>Lunes</h2>
-    </div>
-    <a href="Domingo.html">
-        <button class="bot1"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-back_97586.png"></button>
-    </a>
-    <a href="Martes.html">
-        <button class="bot2"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-next_97622.png"></button>
-    </a>
 <div class="contenedor">
+    <div class="cajaS">
+        <p class="textS">INGENIERÍA EN ELECTRÓNICA<p/>
+    </div>
+    <div class="cajaS">
+        <p class="textS">Septiembre 2024 - Diciembre 2024<p/>
+    </div>
     <div class="cajaA">
-        <h2 class="titulo">INTRODUCCIÓN A LA CONTABILIDAD</h2>
+        <h2 class="titulo">CÁLCULO IV</h2>
+        <h2 class="descripcion">SECCIÓN: O411</h2>
+        <H3 class="aaa">Ver menos</H3>
+        <div class="circulo">
+            <p class="nota">12.30</p>
+        </div>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> TAMARA ALBORNOZ</p>
-        <p><strong>Sección:</strong> R211</p>
-        <p><strong>Aula:</strong> C-15</p>
-</div>
-<div class="horas">
-    <p class="hora"><strong>08:00</strong></p>
-    <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>10:00</strong></p>
-</div>
-<div class="contenedor">
+        <p><strong>Código:</strong> 071603010605</p>
+        <p><strong>Docente:</strong> Belkis Vera</p>
+        <p><strong>Identificación:</strong> 07770906</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">.........................................</strong>04/10/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 14/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 4.20</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">.........................................</strong>08/11/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 11/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 3.30</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">.........................................</strong>28/11/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 12/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
+        <p><strong>Nota %:</strong> 4.80</p>
+    </div>
     <div class="cajaA">
-        <h2 class="titulo">GESTIÓN DE RECURSOS HUMANOS</h2>
+        <h2 class="titulo">FÍSICA III</h2>
+        <h2 class="descripcion">SECCIÓN: O411</h2>
+        <H3 class="aaa">Ver menos</H3>
+        <div class="circulo">
+            <p class="nota">13.00</p>
+        </div>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> JORGE POLANCO</p>
-        <p><strong>Sección:</strong> P411</p>
-        <p><strong>Aula:</strong> A-06</p>
-</div>
-<div class="horas">
-    <p class="hora"><strong>10:00</strong></p>
-    <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>12:00</strong></p>
-</div>
-<div class="contenedor">
+        <p><strong>Código:</strong> 071604030705</p>
+        <p><strong>Docente:</strong> Alvaro Delmar</p>
+        <p><strong>Identificación:</strong> 07709145</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">.........................................</strong>01/10/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 10/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 3.00</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">.........................................</strong>28/10/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 16/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 4.80</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">.........................................</strong>25/11/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 13/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
+        <p><strong>Nota %:</strong> 5.20</p>
+    </div>
     <div class="cajaA">
-        <h2 class="titulo">COMPORTAMIENTO Y CLIMA ORGANIZACIONAL</h2>
+        <h2 class="titulo">PROGRAMACIÓN</h2>
+        <h2 class="descripcion">SECCIÓN: O411</h2>
+        <H3 class="aaa">Ver menos</H3>
+        <div class="circulo">
+            <p class="nota">14.90</p>
+        </div>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> SILVIA FUENMAYOR</p>
-        <p><strong>Sección:</strong> E511</p>
-        <p><strong>Aula:</strong> B-03</p>
-</div>
-<div class="horas">
-    <p class="hora"><strong>12:00</strong></p>
-    <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>01:00</strong></p>
+        <p><strong>Código:</strong> 071604060302</p>
+        <p><strong>Docente:</strong> Junior Gonzalez</p>
+        <p><strong>Identificación:</strong> 16438863</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">.........................................</strong>24/09/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 13/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 3.90</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">.........................................</strong>29/10/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 10/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 3.00</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">.........................................</strong>26/11/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 20/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
+        <p><strong>Nota %:</strong> 8.00</p>
+    </div>
+    <div class="cajaA">
+        <h2 class="titulo">DESARROLLO SUSTENTABLE</h2>
+        <h2 class="descripcion">SECCIÓN: S511</h2>
+        <H3 class="aaa">Ver menos</H3>
+        <div class="circulo">
+            <p class="nota">12.00</p>
+        </div>
+    </div>
+    <div class="cajaB">
+        <p><strong>Código:</strong> 071604020303</p>
+        <p><strong>Docente:</strong> Gladys Rubio</p>
+        <p><strong>Identificación:</strong> 07786017</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">.........................................</strong>25/10/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 20/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 6.00</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">.........................................</strong>30/10/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 20/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 6.00</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">.........................................</strong>27/11/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> NP/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
+        <p><strong>Nota %:</strong> 0.00</p>
+    </div>
+    <div class="cajaA">
+        <h2 class="titulo">ACTIVIDADES RECREACIONALES</h2>
+        <h2 class="descripcion">SECCIÓN: D-211</h2>
+        <H3 class="aaa">Ver menos</H3>
+        <div class="circulo">
+            <p class="nota">15.50</p>
+        </div>
+    </div>
+    <div class="cajaB">
+        <p><strong>Código:</strong> 071604040302</p>
+        <p><strong>Docente:</strong> Oswaldo Torregroza</p>
+        <p><strong>Identificación:</strong> 07828043</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">.........................................</strong>04/10/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 13/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 3.90</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">.........................................</strong>31/10/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 20/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 6.00</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">.........................................</strong>21/11/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 14/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
+        <p><strong>Nota %:</strong> 5.60</p>
+    </div>
+    <div class="cajaA">
+        <h2 class="titulo">INGLÉS II</h2>
+        <h2 class="descripcion">SECCIÓN: D411</h2>
+        <H3 class="aaa">Ver menos</H3>
+        <div class="circulo">
+            <p class="nota">11.60</p>
+        </div>
+    </div>
+    <div class="cajaB">
+        <p><strong>Código:</strong> 071604050302</p>
+        <p><strong>Docente:</strong> Carlos Contreras</p>
+        <p><strong>Identificación:</strong> 08256125</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 1</strong><strong class="B">.........................................</strong>27/09/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 20/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 6.00</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 2</strong><strong class="B">.........................................</strong>01/11/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 12/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 30.00%</p>
+        <p><strong>Nota %:</strong> 3.60</p>
+        <div class="corte">
+            <p class="ncorte"><strong>CORTE 3</strong><strong class="B">.........................................</strong>29/11/2024</p>
+        </div>
+        <p><strong>Nota / Base:</strong> 05/20</p>
+        <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
+        <p><strong>Nota %:</strong> 2.00</p>
+    </div>
 </div>
 </body>
 </html>
