--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <h2 class="descripcion">SECCIÓN: S511</h2>
         <H3 class="aaa">Ver menos</H3>
         <div class="circulo">
-            <p class="nota">12.00</p>
+            <p class="nota">16.00</p>
         </div>
     </div>
     <div class="cajaB">
@@ -136,9 +136,9 @@
         <div class="corte">
             <p class="ncorte"><strong>CORTE 3</strong><strong class="B">.........................................</strong>27/11/2024</p>
         </div>
-        <p><strong>Nota / Base:</strong> NP/20</p>
+        <p><strong>Nota / Base:</strong> 10/20</p>
         <p><strong>Porcentaje Acumulado:</strong> 40.00%</p>
-        <p><strong>Nota %:</strong> 0.00</p>
+        <p><strong>Nota %:</strong> 4.00</p>
     </div>
     <div class="cajaA">
         <h2 class="titulo">ACTIVIDADES RECREACIONALES</h2>
