--- a/Miercoles.html
+++ b/Miercoles.html
@@ -10,22 +10,22 @@
         <h1>HORARIO DE CLASES</h1>
     </div>
     <div class="dias">
-        <h2>LUNES</h2>
+        <h2>MIÉRCOLES</h2>
     </div>
-    <a href="Domingo.html">
+    <a href="Martes.html">
         <button class="bot1"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-back_97586.png"></button>
     </a>
-    <a href="Martes.html">
+    <a href="Jueves.html">
         <button class="bot2"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-next_97622.png"></button>
     </a>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">CONTABILIDAD I</h2>
+        <h2 class="titulo">CALIDAD Y PRODUCTIVIDAD</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> ROSALIA RUIZ</p>
-        <p><strong>Sección:</strong> M311</p>
-        <p><strong>Aula:</strong> C-01</p>
+        <p><strong>Profesor:</strong> NINOSKA CHIRINOS</p>
+        <p><strong>Sección:</strong> P511</p>
+        <p><strong>Aula:</strong> A-14</p>
 </div>
 <div class="horas">
     <p class="hora"><strong>08:00</strong></p>
@@ -34,27 +34,26 @@
 </div>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">PLANIFICACIÓN ESTRATÉGICA DE
-            RR.HH</h2>
+        <h2 class="titulo">CONTABILIDAD I</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> ANTONIO VERGES</p>
-        <p><strong>Sección:</strong> R-411</p>
-        <p><strong>Aula:</strong> E-15</p>
+        <p><strong>Profesor:</strong> ROSALIA RUIZ</p>
+        <p><strong>Sección:</strong> M311</p>
+        <p><strong>Aula:</strong> C-17</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>10:40</strong></p>
+    <p class="hora"><strong>10:00</strong></p>
     <p class="hora"><strong>a</strong></p>
     <p class="hora"><strong>12:00</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">DESARROLLO SUSTENTABLE</h2>
+        <h2 class="titulo">LÓGICA</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> LERIE SOCORRO</p>
-        <p><strong>Sección:</strong> G511P6</p>
-        <p><strong>Aula:</strong> F-20</p>
+        <p><strong>Profesor:</strong> JIMMY STAVISKY</p>
+        <p><strong>Sección:</strong> H221</p>
+        <p><strong>Aula:</strong> E-15</p>
 </div>
 <div class="horas">
     <p class="hora"><strong>12:40</strong></p>
